<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/button_w_edge"
    android:padding="@dimen/padding_s">

    <TextView
        android:id="@+id/popup_savePic"
        style="@style/menu_item"
        android:text="@string/save" />
    <View
       style="@style/view_line"/>
    <TextView
        android:id="@+id/popup_delete"
        style="@style/menu_item"
        android:text="@string/delete2" />
    <View
        style="@style/view_line"/>
    <TextView
        android:id="@+id/popup_rubber"
        style="@style/menu_item"
        android:text="@string/errase" />
    <View
        style="@style/view_line"/>
    <TextView
        android:id="@+id/popup_share"
        style="@style/menu_item"
        android:text="@string/share" />

    <View
        style="@style/view_line"/>
    <TextView
        android:id="@+id/popup_recog"
        style="@style/menu_item"
        android:text="@string/recog" />

    <View
        style="@style/view_line"/>
    <TextView
        android:id="@+id/popup_mail"
        style="@style/menu_item"
        android:text="@string/mail" />

</LinearLayout>
