<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include
        android:id="@+id/activity_header"
        layout="@layout/activity_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/btn_reg"
            android:layout_margin="@dimen/margin_xl"
            android:textColor="@color/black"
            android:textSize="@dimen/edit_font"
            android:layout_gravity="top|right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_w_edge"
            android:padding="@dimen/Margin_XSSSSS"
            android:text="@string/register"/>
        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_M"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/user_phone"
                android:layout_width="@dimen/edit_w"
                android:layout_height="@dimen/flippager_H"
                android:drawableLeft="@drawable/wode"
                android:drawablePadding="@dimen/flippager_margin"
                android:inputType="number"
                android:paddingLeft="@dimen/dialog_margin_small"
                android:hint="@string/phoneNumber"
                android:textSize="@dimen/link_text_font"
                android:background="@drawable/button_w_edge"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/toolbar_bin_width"
                android:background="@drawable/button_w_edge"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/user_password"
                    android:layout_width="@dimen/edit_w2"
                    android:layout_height="@dimen/dialog_button_height"
                    android:drawableLeft="@drawable/mima"
                    android:drawablePadding="@dimen/flippager_margin"
                    android:paddingLeft="@dimen/dialog_margin_small"
                    android:inputType="textPassword"
                    android:textSize="@dimen/link_text_font"
                    android:background="@null"
                    android:hint="@string/password"
                    />
                <ImageButton
                    android:id="@+id/sys_pass"
                    android:layout_margin="@dimen/PaddingXXL"
                    android:layout_width="@dimen/image_w"
                    android:layout_height="match_parent"
                    android:background="@color/bai"
                    android:src="@drawable/yanjing"/>

            </LinearLayout>

        </LinearLayout>
    <TextView
        android:id="@+id/findpasswordBtn"
        android:layout_marginLeft="@dimen/edit_w3"
        android:textColor="@color/black"
        android:textSize="@dimen/edit_font"
        android:layout_gravity="top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/Margin_XSSSSS"
        android:text="@string/findPassword"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_marginTop="@dimen/margin_xl"
            android:layout_gravity="center_horizontal"
            android:layout_width="@dimen/bar_more_width_port"
            android:layout_height="@dimen/marginTop"
            android:textSize="@dimen/edit_font"
            android:text="@string/login"
            android:background="@drawable/button_w_edge"/>


</LinearLayout>
