<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <include
        android:id="@+id/activity_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/activity_header" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_header"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/Margin_XS"
            android:layout_weight="3"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/title"
            android:textColor="@color/dark"
            android:textSize="@dimen/Second_Title_Font_Size" />

        <TextView
            android:id="@+id/title_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/Margin_XS"
            android:layout_weight="1"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="@color/dark"
            android:textSize="@dimen/Second_Title_Font_Size" />
    </LinearLayout>

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginTop="3dp"
        android:background="@color/grad" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line2"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/Margin_XS"
            android:layout_weight="3"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/duration"
            android:textColor="@color/dark"
            android:textSize="@dimen/Second_Title_Font_Size" />

        <TextView
            android:id="@+id/duration_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/Margin_XS"
            android:layout_weight="1"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="@color/dark"
            android:textSize="@dimen/Second_Title_Font_Size" />
    </LinearLayout>

    <View
        android:id="@+id/line4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/linearLayout3"
        android:layout_marginTop="3dp"
        android:background="@color/grad" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line4"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/Margin_XS"
            android:layout_weight="3"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/validPeriod"
            android:textColor="@color/dark"
            android:textSize="@dimen/Second_Title_Font_Size" />

        <TextView
            android:id="@+id/validPeriod_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/Margin_XS"
            android:layout_weight="1"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="@color/dark"
            android:textSize="@dimen/Second_Title_Font_Size" />
    </LinearLayout>

    <View
        android:id="@+id/line5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/linearLayout4"
        android:layout_marginTop="3dp"
        android:background="@color/grad" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/Margin_XS"
            android:ellipsize="end"
            android:singleLine="true"
            android:layout_below="@+id/line5"
            android:text="@string/descrip"
            android:id="@+id/describe1"
            android:textColor="@color/dark"
            android:textSize="@dimen/Second_Title_Font_Size" />

        <TextView
            android:id="@+id/describe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/Margin_XS"
            android:ellipsize="end"
            android:layout_below="@+id/line5"
            android:layout_toRightOf="@+id/describe1"
            android:textColor="@color/dark"
            android:textSize="@dimen/Second_Title_Font_Size" />
    <View
        android:id="@+id/line6"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/describe"
        android:layout_marginTop="3dp"
        android:visibility="gone"
        android:background="@color/grad" />
    <LinearLayout
        android:id="@+id/foot_mid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/describe"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="@dimen/Margin_M"
        android:layout_marginTop="@dimen/Margin_XS"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/Margin_L"
            android:padding="@dimen/Margin_XS"
            android:textColor="@color/dark"
            android:textSize="@dimen/Second_Title_Font_Size" />

        <View
            android:id="@+id/mid_line"
            android:layout_width="@dimen/Separate_Line_H"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/purchase"
            android:layout_toRightOf="@+id/price"
            android:background="@color/dark" />

        <TextView
            android:id="@+id/purchase"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:padding="@dimen/Margin_XS"
            android:text="@string/purchase"
            android:textColor="@color/dark"
            android:textSize="@dimen/Second_Title_Font_Size" />
    </LinearLayout>

    <TextView
        android:id="@+id/qr_code_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/foot_mid"
        android:layout_centerInParent="true"
        android:text="@string/wechatPay"
        android:textSize="@dimen/Second_Title_Font_Size"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/qr_code_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/qr_code_txt"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <Button
        android:id="@+id/weixin_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:text="立即支付"
        android:textColor="@color/black"
        android:textSize="@dimen/Second_Title_Font_Size"
        android:visibility="gone" />

</RelativeLayout>